<resources>
    <string name="app_name">Ruige Tweets</string>
    <string name="place_holder_name">Eric Kerkhoven</string>
    <string name="place_holder_screen_name">eeriek95</string>
    <string name="place_holder_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget ullamcorper magna. Ut aliquet euismod ex. Aliquam erat volutpat. Etiam non maximus libero. Ut luctus ac sapien commodo vulputate. Praesent non elementum nulla. Praesent sed accumsan sed.</string>
    <string name="place_holder_follower_count">10000</string>
    <string name="place_holder_retweet_count">10000</string>
    <string name="iv_followers_content_description">icon for number of followersCount</string>
    <string name="iv_retweet_content_description">icon for retweet count</string>
    <string name="place_holder_location">Enschede</string>
    <string name="iv_profile_img_content_description">profile picture from the user</string>
    <string name="iv_background_img_description">background picture from the user profile</string>
    <string name="btn_login_description">Inloggen bij Twitter</string>
    <string name="iv_go_to_profile_description">Ga naar profielpagina</string>
    <string name="iv_go_to_timeline_description">Ga naar tijdlijn</string>
    <string name="iv_add_tweet_description">Voeg een tweet toe</string>
    <string name="iv_search_tweet_description">Zoek naar een Tweet</string>
    <string name="send_tweet">send</string>
    <string name="date_time_place_holder">dd/MMM/yyyy HH:mm:ss</string>
    <string name="char_count">140</string>
    <string name="iv_content_description">An image of the user that posted the tweet</string>
    <string name="tv_search_text">Zoeken</string>
</resources>
