<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iv_profile_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:contentDescription="@string/iv_profile_img_content_description"
            app:srcCompat="@android:color/white" />


        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/place_holder_name" />

        <TextView
            android:id="@+id/tv_sceen_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_name"
            android:layout_marginTop="8dp"
            android:text="@string/place_holder_screen_name" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_sceen_name"
            android:layout_marginTop="8dp"
            android:text="@string/place_holder_location" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/iv_profile_img"
            android:layout_marginTop="8dp"
            android:text="@string/place_holder_description" />


        <ImageView
            android:id="@+id/iv_followers_count"
            android:layout_width="14sp"
            android:layout_height="14sp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="32dp"
            android:layout_toEndOf="@+id/tv_name"
            android:contentDescription="@string/iv_followers_content_description"
            app:srcCompat="@drawable/twitter" />

        <TextView
            android:id="@+id/tv_followers_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/iv_followers_count"
            android:text="@string/place_holder_retweet_count" />

        <ImageView
            android:id="@+id/iv_favorites_count"
            android:layout_width="14sp"
            android:layout_height="14sp"
            android:layout_alignTop="@+id/tv_sceen_name"
            android:layout_alignStart="@+id/iv_followers_count"
            android:contentDescription="@string/iv_retweet_content_description"
            app:srcCompat="@drawable/favorite" />


        <TextView
            android:layout_alignBottom="@id/iv_favorites_count"
            android:layout_toEndOf="@+id/iv_favorites_count"
            android:id="@+id/tv_favorites_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/place_holder_follower_count" />


    </RelativeLayout>

    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">


        <ListView
            android:id="@+id/lv_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>
    </LinearLayout>

</LinearLayout>