<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:textStyle="bold"
        android:id="@+id/tv_user_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="User"
        android:textSize="32sp" />

    <RelativeLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iv_user_profile_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/iv_profile_img_content_description"
            app:srcCompat="@android:color/white" />


        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/place_holder_name" />

        <TextView
            android:id="@+id/tv_user_sceen_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_user_name"
            android:layout_marginTop="8dp"
            android:text="@string/place_holder_screen_name" />

        <TextView
            android:id="@+id/tv_user_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_user_sceen_name"
            android:layout_marginTop="8dp"
            android:text="@string/place_holder_location" />

        <TextView
            android:id="@+id/tv_user_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/iv_user_profile_img"
            android:layout_marginTop="8dp"
            android:text="@string/place_holder_description" />


        <ImageView
            android:id="@+id/iv_user_followers_count"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="32dp"
            android:layout_toEndOf="@+id/tv_user_name"
            android:contentDescription="@string/iv_followers_content_description"
            android:src="@drawable/twitterblue" />

        <TextView
            android:id="@+id/tv_user_followers_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/iv_user_followers_count"
            android:text="@string/place_holder_retweet_count" />

        <ImageView
            android:id="@+id/iv_user_favorites_count"
            android:layout_width="14sp"
            android:layout_height="14sp"
            android:layout_alignStart="@+id/iv_user_followers_count"
            android:layout_alignTop="@+id/tv_user_sceen_name"
            android:contentDescription="@string/iv_retweet_content_description"
            app:srcCompat="@drawable/favorite" />


        <TextView
            android:id="@+id/tv_user_favorites_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_user_favorites_count"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/iv_user_favorites_count"
            android:text="@string/place_holder_follower_count" />


    </RelativeLayout>

    <TextView
        android:textStyle="bold"
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Status"
        android:textSize="32sp" />

    <RelativeLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true" />

        <TextView
            android:layout_marginTop="8dp"
            android:layout_below="@id/tv_date"
            android:id="@+id/tv_status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_marginTop="8dp"
            android:id="@+id/iv_status_favorite_count"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_status_text"
            android:src="@drawable/favorite" />

        <TextView
            android:id="@+id/tv_status_favorite_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_status_favorite_count"
            android:layout_toEndOf="@+id/iv_status_favorite_count"
            android:text="00" />

        <ImageView
            android:layout_marginStart="32dp"
            android:id="@+id/iv_status_retweet_count"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignBottom="@+id/iv_status_favorite_count"
            android:layout_toEndOf="@+id/tv_status_favorite_count"
            android:src="@drawable/retweet" />

        <TextView
            android:id="@+id/tv_status_retweet_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_status_favorite_count"
            android:layout_toEndOf="@id/iv_status_retweet_count"
            android:text="00" />

        <ImageView
            android:id="@+id/iv_media"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_status_text" />

    </RelativeLayout>


</LinearLayout>
