<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_gravity="bottom"
    android:weightSum="4"
    android:id="@+id/fr_menu"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:id="@+id/ll_add_tweet"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_add_tweet"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/iv_add_tweet_description"
            android:src="@drawable/plus" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:id="@+id/ll_search_tweet"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_search_tweet"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/iv_search_tweet_description"
            android:src="@drawable/search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:id="@+id/ll_go_to_timeline"
        android:background="@drawable/border">

        <ImageView
            android:id="@+id/iv_twitter_feed"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/twitterblue"
            android:contentDescription="@string/iv_go_to_timeline_description" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:id="@+id/ll_go_to_profile"
        android:background="@drawable/border">
        <ImageView
            android:id="@+id/iv_view_profile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/user"
            android:contentDescription="@string/iv_go_to_profile_description" />
    </LinearLayout>
</LinearLayout>